# fcitx-skk-plus

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.h
data/: CMakeLists.txt  Makefile  cmake_install.cmake
fcitx_cmake_cache/: handlers-cache.txt  pos-cache.txt  sources-cache.txt
gui/: CMakeLists.txt  Makefile  cmake_install.cmake  dictmodel.cpp  dictwidget.h  main.cpp  main.h
po/: Makefile  ca.po  cmake_install.cmake  da.po
src/: Makefile  cmake_install.cmake  dictionary_list  fcitx-skk.conf.in  fcitx-skk.desc  skk-config.c  skk.c  skk.conf.in  skk.h
